kubernetes/clusters/ruth/podinfo/patch-secrets.yaml
apiVersion: kustomize.config.k8s.io/v1beta1
kind: Deployment
metadata:
  name: my-podinfo
  namespace: podinfo
spec:
  template:
    spec:
      containers:
        - name: podinfo
